# otus-iced

./: Cargo.toml  Readme.md
examples/: cli_socket.rs  cli_termo.rs
src/: lib.rs  main.rs  main.rs.1  power.rs  socket.rs  state.rs  temperature.rs  termometer.rs
tests/: test.rs
