[package]
name = "otus-iced"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features=["full"] }
iced  = { version = "0.13", features = [ "tokio", "advanced" ] }
regex = { version = "1.11.1" }
async-stream = "0.3"

[[bin]]
name = "server"
path = "src/main.rs"

[[example]]
name = "cli_termo"

[[example]]
name = "cli_socket"
